# quala

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: documentation.yml  tests.yml  wheel-windows.yml  wheel.yml
0.0.1a0/Coverage/: index-sort-f.html  index-sort-l.html  index.html
0.0.1a0/Doxygen/: External-Resources_8md.html  Installation-dev_8md.html  Installation_8md.html  README_8md.html  ____init_____8py.html  ____init_____8py_source.html  alloc_8hpp.html  alloc_8hpp_source.html  anderson-acceleration_8hpp.html  anderson-acceleration_8hpp_source.html  anderson-helpers_8hpp.html  anderson-helpers_8hpp__dep__incl.map  anderson-helpers_8hpp__dep__incl.md5  anderson-helpers_8hpp__incl.map  anderson-helpers_8hpp_source.html  annotated.html  broyden-good_8hpp.html  broyden-good_8hpp__dep__incl.map  broyden-good_8hpp__dep__incl.md5  broyden-good_8hpp__incl.map  broyden-good_8hpp__incl.md5  broyden-good_8hpp_source.html  classattr__setter__fun__t-members.html  classattr__setter__fun__t.html  classes.html  classquala_1_1AndersonAccel-members.html  classquala_1_1AndersonAccel.html  classquala_1_1AndersonAccel__coll__graph.md5  classquala_1_1AndersonAccel_a3c6a2dbecc0d6f8cd90bef088c46b072_cgraph.map  classquala_1_1AndersonAccel_a727afc7a58d2e44ae7add57e3fa77bc6_cgraph.md5  classquala_1_1AndersonAccel_a7cbecaa52700158ebe36c0d587791ed4_cgraph.map  classquala_1_1AndersonAccel_a933e2462ce1049db54fed366cce62477_icgraph.md5  classquala_1_1AndersonAccel_a9cf7dcccbc3bc69a10833450ee79c623_cgraph.map  classquala_1_1AndersonAccel_ab55e2bb8c6d8912c0d55ff4dc2b3b4a2_cgraph.map  classquala_1_1AndersonAccel_abfe51417fbebd259808f86d27f1d7ec5_cgraph.map  classquala_1_1AndersonAccel_abfe51417fbebd259808f86d27f1d7ec5_icgraph.md5  classquala_1_1AndersonAccel_ad20897c5c8bd47f5d4005989bead0e55_cgraph.map  classquala_1_1AndersonAccel_ad20897c5c8bd47f5d4005989bead0e55_icgraph.md5  classquala_1_1BroydenGood-members.html  classquala_1_1BroydenGood.html  (+322 more)
0.0.1a0/Sphinx/: .buildinfo  genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.0.1a1/Coverage/: index-sort-f.html  index-sort-l.html  index.html  shield.io.coverage.json
0.0.1a1/Doxygen/: External-Resources_8md.html  Installation-dev_8md.html  Installation_8md.html  README_8md.html  alloc_8hpp.html  alloc_8hpp_source.html  anderson-acceleration_8hpp.html  anderson-acceleration_8hpp__dep__incl.map  anderson-acceleration_8hpp__incl.map  anderson-acceleration_8hpp__incl.md5  anderson-acceleration_8hpp_source.html  anderson-helpers_8hpp.html  anderson-helpers_8hpp__dep__incl.md5  anderson-helpers_8hpp_source.html  annotated.html  broyden-good_8hpp.html  broyden-good_8hpp__incl.md5  broyden-good_8hpp_source.html  classattr__setter__fun__t-members.html  classattr__setter__fun__t.html  classattr__setter__fun__t__coll__graph.map  classattr__setter__fun__t__coll__graph.md5  classes.html  classquala_1_1AndersonAccel-members.html  (+409 more)
Coverage/: index-sort-f.html  index-sort-l.html  index.html
Doxygen/: External-Resources_8md.html  Installation-dev_8md.html  Installation_8md.html  README_8md.html  ____init_____8py.html  ____init_____8py_source.html  alloc_8hpp.html  alloc_8hpp__incl.map  alloc_8hpp_source.html  anderson-acceleration_8hpp.html  anderson-acceleration_8hpp__incl.md5  anderson-acceleration_8hpp_source.html  anderson-helpers_8hpp.html  anderson-helpers_8hpp_source.html  annotated.html  broyden-good_8hpp.html  broyden-good_8hpp_source.html  classattr__setter__fun__t-members.html  classattr__setter__fun__t.html  classes.html  classquala_1_1AndersonAccel-members.html  classquala_1_1AndersonAccel.html  classquala_1_1AndersonAccel__coll__graph.map  classquala_1_1AndersonAccel_a1fcb04cfb2b1398b54d8242cc3b0fb34_cgraph.map  classquala_1_1AndersonAccel_a3c6a2dbecc0d6f8cd90bef088c46b072_cgraph.md5  classquala_1_1AndersonAccel_a3c6a2dbecc0d6f8cd90bef088c46b072_icgraph.map  classquala_1_1AndersonAccel_a3c6a2dbecc0d6f8cd90bef088c46b072_icgraph.md5  classquala_1_1AndersonAccel_a727afc7a58d2e44ae7add57e3fa77bc6_cgraph.map  classquala_1_1AndersonAccel_a9cf7dcccbc3bc69a10833450ee79c623_cgraph.md5  classquala_1_1AndersonAccel_abfe51417fbebd259808f86d27f1d7ec5_cgraph.md5  classquala_1_1AndersonAccel_abfe51417fbebd259808f86d27f1d7ec5_icgraph.map  classquala_1_1AndersonAccel_ad20897c5c8bd47f5d4005989bead0e55_cgraph.md5  classquala_1_1AndersonAccel_af02aae3147e83aeb9f83c4f0a17f537f_cgraph.md5  classquala_1_1BroydenGood-members.html  classquala_1_1BroydenGood.html  classquala_1_1BroydenGood__coll__graph.map  classquala_1_1BroydenGood__coll__graph.md5  classquala_1_1BroydenGood_a0804b751cf2035a35f24762474f62cbf_cgraph.map  classquala_1_1BroydenGood_a0804b751cf2035a35f24762474f62cbf_cgraph.md5  classquala_1_1BroydenGood_a1380d11b100437c5d8d8fc21be5ea7b6_cgraph.map  (+325 more)
Sphinx/: changelog.html  genindex.html  index.html  objects.inv  searchindex.js
cmake/: GlobalCompilerOptions.cmake  GlobalCompilerWarnings.cmake  Install.cmake
docs/: README.md
doxygen/: Doxyfile.breathe  Doxyfile.common
logo/: logo_colors.tex  logo_common.tex  make_images.sh  quala_favicon.tex  quala_logo.tex
scripts/: coverage.sh  install-eigen.sh  install-gtest.sh  install-sphinx.sh  requirements-docs.txt  requirements-wheel.txt
src/: CMakeLists.txt  groups.dox
src/cmake/: Config.cmake.in  GlobalCompilerOptions.cmake  Install.cmake
src/include/quala/: anderson-acceleration.hpp  broyden-good.hpp  lbfgs.hpp
src/include/quala/decl/: lbfgs-fwd.hpp  lbfgs.hpp
src/include/quala/detail/: anderson-helpers.hpp  limited-memory-qr.hpp
src/include/quala/util/: alloc.hpp  ringbuffer.hpp  vec.hpp
src/python/: CMakeLists.txt  kwargs-to-struct.hpp  quala.py.cpp
src/python/test/: test_anderson.py  test_solve_linear_system.py
src/quala/: CMakeLists.txt  __init__.py  kwargs-to-struct.hpp  quala.cpp  test.py
src/quala/test/: test_solve_linear_system.py
src/src/: lbfgs.cpp
test/: CMakeLists.txt  test-alloc.cpp  test-anderson-acceleration.cpp  test-lbfgs.cpp  test-limited-memory-qr.cpp  test-ringbuffer.cpp
(+1382 files in other folders)
